Updates to support paper-towny