@@ -2,20 +2,20 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gmail.goosius</groupId>
   <artifactId>TownyCultures</artifactId>
-  <version>2.0.3</version>
+  <version>2.1.0</version>
   <name>townycultures</name> <!-- Leave lower-cased -->
 
   <properties>
     <java.version>17</java.version>
     <project.bukkitAPIVersion>1.16</project.bukkitAPIVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <towny.version>0.100.4.0</towny.version>
+    <towny.version>0.101.2.5</towny.version>
   </properties>
 
   <repositories>
     <repository>
-      <id>spigot-repo</id>
-      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+      <id>papermc</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
     </repository>
     <repository>
       <id>jitpack.io</id>
@@ -37,16 +37,15 @@
   
   <dependencies>
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
-      <version>1.18.1-R0.1-SNAPSHOT</version>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.21.8-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.palmergames.bukkit.towny</groupId>
       <artifactId>towny</artifactId>
-      <version>0.100.4.0</version>
-      <scope>provided</scope>
+      <version>${towny.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains</groupId>
@@ -70,12 +69,6 @@
       <version>2.11.6</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>com.github.bsideup.jabel</groupId>
-      <artifactId>jabel-javac-plugin</artifactId>
-      <version>1.0.0</version>
-      <scope>provided</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -83,14 +76,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.8.0</version>
         <configuration>
-          <release>8</release>
-          <source>17</source>
-          <target>17</target>
-          <compilerArgs>
-            <arg>-Xplugin:jabel</arg>
-          </compilerArgs>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
     </plugins>
@@ -101,30 +90,5 @@
       </resource>
     </resources>
   </build>
-  
-  <profiles>
-    <profile>
-      <id>intellij-idea-only</id>
-      <activation>
-        <property>
-          <name>idea.maven.embedder.version</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <release>8</release>
-              <compilerArgs>
-                <arg>--enable-preview</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
